--- a/styles.css
+++ b/styles.css
@@ -29,16 +29,31 @@ body{
 .cellprop_actions_cont > * {
     display: inline-block;
     margin-left: 8px;
+    cursor: pointer;
 }
 
 .cellprop_actions_cont > select {
     border: none;
     border-radius: 1px;
     outline: none;
+    
 }
 
 .font_family_prop , .font_size_prop {
     padding: 4px
+}
+
+.color_prop{
+    position: relative;
+}
+
+.fontColor_prop, .bgColor_prop{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
 }
 
 .formula_actions_cont{
@@ -138,8 +153,6 @@ body{
     height: 2rem;
     width: 5rem;
     border: 1px solid #D8D3CD;
-    text-align: center;
-    vertical-align: middle;
     outline: none;
 }
 
